--- a/ocaml/dune-project
+++ b/ocaml/dune-project
@@ -20,7 +20,7 @@
  (name sloth_script)
  (synopsis "A short synopsis")
  (description "A longer description")
- (depends ocaml dune)
+ (depends ocaml dune ounit2)
  (tags
   (topics "to describe" your project)))
 
