--- a/ocaml/lib/dune
+++ b/ocaml/lib/dune
@@ -3,6 +3,9 @@
  (libraries unix))
 
 (menhir
-  (modules parser))
+  (modules parser)
+  ; https://gallium.inria.fr/~fpottier/menhir/manual.html#sec63
+  ; exn-carries-state -> Parser.Error of int
+  (flags --exn-carries-state))
 
 (ocamllex lexer)
