--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -41,8 +41,6 @@ jobs:
         shell: bash -exo pipefail {0}
         working-directory: ./tool
         run: |
-          cat /root/.profile
-          echo $PATH
-          echo $SHELL
+          eval $(opam env --switch=default-switch)
           dune --version
           make
